--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dist": "gh-pages -d dist",
     "build": "npm run test && rollup -c -n lookup -f umd index.js -o dist/lookup.js && rollup -c -n lookup -f es index.js -o dist/lookup.es.js",
     "uglify": "uglifyjs dist/lookup.js -o dist/lookup.min.js",
-    "postversion": "git push --tags",
-    "postpublish": "npm run dist",
+    "postpublish": "git push --tags && npm run dist",
     "test": "rollup -c -n lookup -f cjs index.js -o test/lookup.js && tape test"
   },
   "author": "",
